Update Trip ML Model.ipynb --> trip_data path

--- a/Trip ML Model.ipynb
+++ b/Trip ML Model.ipynb
@@ -151,7 +151,7 @@
    ],
    "source": [
     "\n",
-    "trip_data=pd.read_csv(\"/media/ankit/New Volume/Programming/Python/jupyter notebook/dataset/Trip Data for ML Model/Trip-Data-for-ML-Model.csv\")\n",
+    "trip_data=pd.read_csv(\"Trip-Data-for-ML-Model.csv\")\n",
     "\n",
     "trip_data\n"
    ]
