--- a/Trip ML Model.ipynb
+++ b/Trip ML Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c1c55681-4744-4d71-97cf-9ab23a54b823",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f5073458-162c-4bd2-aba1-314582a9db01",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "[806691 rows x 4 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,12 +169,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "166c75d4-196c-438c-8347-2e18debc6080",
    "metadata": {},
    "outputs": [],
    "source": [
-    "olume/Programming/Python/jupyter notebook/project trip/app.py'trip_data['Actual_Trip_Start'] = pd.to_datetime(trip_data['Actual_Trip_Start'], format=\"%m/%d/%Y %H:%M\")\n",
+    "trip_data['Actual_Trip_Start'] = pd.to_datetime(trip_data['Actual_Trip_Start'], format=\"%m/%d/%Y %H:%M\")\n",
     "trip_data['Actual_Trip_End'] = pd.to_datetime(trip_data['Actual_Trip_End'], format=\"%m/%d/%Y %H:%M\")\n",
     "trip_data['Actual_Trip_Start']=trip_data['Actual_Trip_Start'].dt.time\n",
     "trip_data['Actual_Trip_End']=trip_data['Actual_Trip_End'].dt.time"
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "a2e3ec82-2a15-4cb1-9c2c-800fd2a87131",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "19631e3f-b98b-49e6-b87d-0bf404c13c81",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "       'Wednesday'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "d1d4028d-06ee-4a42-8adf-0930d5ae6e7c",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        "[806691 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "3b54a46a-0847-452c-92af-1e2bfc5734da",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "5f76fb8e-89ee-4244-9b58-f2e5064cdf82",
    "metadata": {},
    "outputs": [
@@ -823,7 +823,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "7356895b-c967-4fa5-9f49-773f1862a911",
    "metadata": {},
    "outputs": [
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "074ffd9a-2ecf-4c5d-82b1-f33605fe3e2a",
    "metadata": {},
    "outputs": [
@@ -874,7 +874,7 @@
        "0.7158893"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "c4d5bf77-ef87-43c3-bb35-2629e31d00a8",
    "metadata": {},
    "outputs": [
